# hpc-delft-tests

./: common.py  main.py  pyproject.toml  start.sh
annotator/: annotator.py  construct.py  prodigal.py
cli/: annotate_command.py  application.py  embed_command.py
cluster/: slurm.py
data/: cache.py  entry.py
embedder/: bert.py  core.py
pipeline/: pipeline.py
