[tool.poetry]
name = "pgembed"
version = "0.1.0"
description = ""
authors = ["thoma <thomas.kluiters@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dask = {extras = ["complete"], version = "^2022.12.0"}
dask-jobqueue = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
