[tool.poetry]
name = "pgembed"
version = "0.1.0"
description = ""
authors = ["Thomas Kluiters <thomas.kluiters@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dask = {extras = ["complete"], version = "*"}
dask-jobqueue = "^0.8.1"
biopython = "*"
tensorflow-macos = {version = "^2.11.0", markers = "sys_platform == 'darwin'"}
protein-bert = "^1.0.1"
cleo = "^2.0.1"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
